objects/Root_Case__c.object
<CustomObject>
    <fields>
        <fullName>Mozilla_Fields_Verified__c</fullName>
        <label>Mozilla Fields Verified?</label>
        <picklist>
            <picklistValues>
                <fullName>Not Verified</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Data Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mozilla_Removal_Bug_No_or_Date__c</fullName>
        <label>Mozilla Removal Bug No. or Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mozilla_Status__c</fullName>
        <label>Mozilla Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Yet Included</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Included</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Multi_Factor_Authentication_Verified__c</fullName>
        <label>Multi-Factor Authentication (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Multi_Factor_Authentication__c</fullName>
        <defaultValue>&quot;NEED section number of the CP/CPS that states that multi-factor authentication is enforced for all accounts capable of directly causing certificate issuance. (reference section 6.5 of the BRs)&quot;</defaultValue>
        <label>Multi-Factor Authentication</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NSS_Release_When_First_Included__c</fullName>
        <label>NSS Release When First Included</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Security_Verified__c</fullName>
        <label>Network Security (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Network_Security__c</fullName>
        <defaultValue>&quot;NEED section number(s) of the CP/CPS dealing with Network Security.&quot;</defaultValue>
        <label>Network Security</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OCSP_URL_Verified__c</fullName>
        <label>OCSP URL (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OCSP_URL_s__c</fullName>
        <defaultValue>&quot;NEED OCSP URL and maximum OCSP expiration time, with reference to where this is documented in the CP/CPS&quot;</defaultValue>
        <inlineHelpText>OCSP is required for the SSL trust bit to be enabled. Provide the OCSP URL that is in the AIA of your subscriber certificates.</inlineHelpText>
        <label>OCSP URL(s)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OU_From_Issuer_Field__c</fullName>
        <description>Organizational Unit</description>
        <inlineHelpText>Organizational Unit</inlineHelpText>
        <label>OU From Issuer Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OU_From_Subject_Field__c</fullName>
        <label>OU From Subject Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OU_from_Issuer_Field_Verified__c</fullName>
        <label>Delete: OU from Issuer Field (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>O_From_Issuer_Field_Verified__c</fullName>
        <label>Delete: O From Issuer Field (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>O_From_Issuer_Field__c</fullName>
        <inlineHelpText>The Organization Name and CN in the Issuer must have sufficient information about the CA Organization.</inlineHelpText>
        <label>O From Issuer Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>O_From_Subject_Field__c</fullName>
        <label>O From Subject Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Org_Verification_Procedure_Verified__c</fullName>
        <label>Org Verification Procedure (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Verification_Procedures__c</fullName>
        <defaultValue>&quot;NEED: CP/CPS sections that describe identity and organization verification procedures for cert issuance.&quot;</defaultValue>
        <label>Organization Verification Procedures</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Relevant_Documents_Verified__c</fullName>
        <label>Other Relevant Documents (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Relevant_Documents__c</fullName>
        <label>Other Relevant Documents</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PKI_Hierarchy_Verified__c</fullName>
        <label>PKI Hierarchy Verified?</label>
        <picklist>
            <picklistValues>
                <fullName>Not Verified</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Data Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_Documentation_Verified__c</fullName>
        <label>Policy Documentation (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_Documentation__c</fullName>
        <defaultValue>&quot;NEED: Languages that the CP/CPS and other documents are provided in.&quot;</defaultValue>
        <label>Policy Documentation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Publ_Discl_Audited_subCAs_Verified__c</fullName>
        <description>Link to Publicly Disclosed and Audited subordinate CA Certificates (Verified?)</description>
        <label>Delete: Publ Discl &amp; Audited (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Public_Key_Algorithm__c</fullName>
        <label>Public Key Algorithm</label>
        <picklist>
            <picklistValues>
                <fullName>RSA 1024 bits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA 2045 bits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA 2046 bits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA 2047 bits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA 2048 bits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA 3072 bits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA 4096 bits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC secp256r</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC secp256r1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC secp384r1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC secp512r1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>unknown</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publicly_Disclosed_and_Audited_subCAs__c</fullName>
        <defaultValue>&quot;NEED URL to publicly disclosed subordinate CA certificates that chain up to certificates in Mozilla&apos;s CA program, as per Items #8, 9, and 10 of Mozilla&apos;s CA Certificate Inclusion Policy.&quot;</defaultValue>
        <description>Link to Publicly Disclosed and Audited subordinate CA Certificates</description>
        <inlineHelpText>Link to Publicly Disclosed and Audited subordinate CA Certificates</inlineHelpText>
        <label>DELETE Publicly Disclosed &amp; Aud subCAs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Initial Request Received</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Information Verification In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Detailed CP/CPS Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Public Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discussion on Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Action Items from Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved, Pending Inclusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved, Pending Inclusion and EV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Included, Pending EV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Withdrawn by CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - CA Unresponsive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revocation_Tested_Verified__c</fullName>
        <label>Revocation Tested (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revocation_Tested__c</fullName>
        <defaultValue>&quot;NEED: Test with http://certificate.revocationcheck.com/ make sure there aren&apos;t any errors.&quot;</defaultValue>
        <inlineHelpText>Browse to http://certificate.revocationcheck.com/ and enter the Test Website URL. Make sure there are no errors listed in the output.</inlineHelpText>
        <label>Revocation Tested</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Root Inclusion Request&quot;, 
&quot;NEED: Explain the unique function of this root, especially if requesting inclusion of multiple roots.&quot;, 
&quot;&quot;)</defaultValue>
        <inlineHelpText>If requesting inclusion of multiple roots, explain unique function of this root.</inlineHelpText>
        <label>Role</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Root_Case_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>18 digit record ID for Root Case</inlineHelpText>
        <label>Root Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Certificate_Download_URL_Verified__c</fullName>
        <label>Root Certificate DownloadURL (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_Certificate_Download_URL__c</fullName>
        <defaultValue>&quot;NEED: A public URL through which the CA certificate can be directly downloaded.&quot;</defaultValue>
        <label>Root Certificate Download URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Root_Certificate_Name_Existing__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Previously called Included Certificate Name</description>
        <inlineHelpText>The Root Certificate that this Root Case applies to.</inlineHelpText>
        <label>Certificate Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Root</value>
            </filterItems>
            <filterItems>
                <field>Account.Parent.Id</field>
                <operation>equals</operation>
                <valueField>$Source.CA_Owner_Name_Existing__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Root Cases (Included Certificate)</relationshipLabel>
        <relationshipName>Root_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Root_Certificate_Name__c</fullName>
        <label>Root Certificate Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Root_Stores_Applying_To__c</fullName>
        <label>Root Stores Applying To</label>
        <picklist>
            <picklistValues>
                <fullName>Apple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mozilla</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Root_Stores_Included_In_Verified__c</fullName>
        <label>Root Stores Included In (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_Stores_Included_In__c</fullName>
        <label>Root Stores Included In</label>
        <picklist>
            <picklistValues>
                <fullName>Apple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mozilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SHA_1_Fingerprint_Verified__c</fullName>
        <label>Delete: SHA-1 Fingerprint (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SHA_1_Fingerprint__c</fullName>
        <label>SHA-1 Fingerprint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SHA_1__c</fullName>
        <formula>IF (SHA_1_Fingerprint__c &lt;&gt; null, LEFT(SHA_1_Fingerprint__c, 11) + &quot;...&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SHA-1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHA_256_Fingerprint_Verified__c</fullName>
        <label>Delete: SHA-256 Fingerprint (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SHA_256_Fingerprint__c</fullName>
        <label>SHA-256 Fingerprint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SHA_256__c</fullName>
        <formula>IF (SHA_256_Fingerprint__c &lt;&gt; null, LEFT(SHA_256_Fingerprint__c, 11) + &quot;...&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SHA-256</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPKI_SHA256__c</fullName>
        <inlineHelpText>Identifies similar logical certificates in different CA Hierarchies. SHA256(der(spki))</inlineHelpText>
        <label>SPKI SHA256</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SSL_Validation_Type_Verified__c</fullName>
        <label>SSL Validation Type (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSL_Validation_Type__c</fullName>
        <label>SSL Validation Type</label>
        <picklist>
            <picklistValues>
                <fullName>DV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EV</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SSL_Verification_Procedures_Verified__c</fullName>
        <label>SSL Verification Procedures (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSL_Verification_Procedures__c</fullName>
        <defaultValue>&quot;NEED: if Websites trust bit requested...&quot; &amp; BR() &amp;
&quot;Sections of CP/CPS that sufficiently describe the verification steps that are taken to confirm the ownership/control of the domain name to be included in the SSL/TLS cert.&quot; &amp; BR() &amp;
&quot;CP/CPS must clearly specify the procedures that the CA employs. Each documented procedure should state which subsection of BR section 3.2.2.4 it is complying with.&quot;</defaultValue>
        <label>SSL Verification Procedures</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signature_Hash_Algorithm__c</fullName>
        <label>Signature Hash Algorithm</label>
        <picklist>
            <picklistValues>
                <fullName>ecdsaWithSHA256</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ecdsaWithSHA384</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ecdsaWithSHA512</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD2WithRSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD5WithRSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHA1WithRSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHA256WithRSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHA384WithRSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHA512WithRSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>md2WithRSAEncryption</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>md5WithRSAEncryption</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>sha1WithRSAEncryption</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>sha256WithRSAEncryption</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>sha384WithRSAEncryption</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>sha512WithRSAEncryption</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signing_Key_Parameters_Verified__c</fullName>
        <label>Delete: Signing Key Param (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>